--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,54 @@
+* {
+  margin: 0;
+  padding: 0;
+  color: black;
+  text-decoration: none;
+}
+
 .App {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+.WeatherContainer {
+  width: 250px;
+  border: 2px solid black;
+  border-radius: 5px;
+  padding: 10px;
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.WeatherResults {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.Left,
+.Right {
+  width: 50%;
+}
+.Left {
+  text-align: right;
+  font-weight: bold;
+}
+.Right {
+  text-align: left;
+  padding-left: 5px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.WeatherButton {
+  border-top: 2px solid black;
+  margin-top: 10px;
+  padding-top: 10px;
+}
+.GetWeatherButton {
+  border: 1px solid black;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.Message {
+  font-size: 1rem;
+  padding: 0 10px;
 }
